--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+*/
+
+	(C) Media Cookie 2012 and Onwards All Rights Reserved
+	Any external use other then Github or moodsearch.net render
+	the user breaching copyright.
+
+    This website is not permitted for external use
+    on any other webdomain other than the sites listed above
+
+    This copyright MUST remain on the document under
+    Australian/New Zealand Law.
+
+   Coded by Jordan Diamond & Daniel Johnson
+   
+
+   */
+
 
 body, a, td, th, input, textarea, select {
  
